<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 상단 뷰 -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#80000000"/>

    <!-- 하단 뷰 -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#80000000"/>

    <!-- 좌측 뷰 -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        android:background="#80000000"/>

    <!-- 우측 뷰 -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintStart_toEndOf="@id/guideline_right"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#80000000"/>

    <View
        android:id="@+id/center_rectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/scan_border"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom" />

    <com.barcodescanner.scanner.ScanningEffectView
        android:id="@+id/scanning_effect_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"/>

    <RelativeLayout
        android:id="@+id/scanned_barcode_scrollview_relative"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="#80000000"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/scanned_barcode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_list"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <ScrollView
            android:id="@+id/scanned_barcode_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/scanned_barcode_text"
            android:layout_above="@id/scanned_barcode_count">

            <LinearLayout
                android:id="@+id/scanned_barcode_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scanned_barcode_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/scanned_barcode_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/scan_count"
            android:textSize="17sp"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/top_buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/toggle_flash_button"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:elevation="2dp"
            android:text="@string/flash_button"/>

        <Button
            android:id="@+id/toggle_screen_orientation_button"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:elevation="2dp"
            android:text="@string/rotate_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/switch_camera_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:elevation="2dp"
        android:text="@string/camera_switch"
        app:layout_constraintTop_toBottomOf="@+id/top_buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/scan_init_button"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="50dp"
        android:elevation="2dp"
        android:text="@string/init_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_centerline" />

    <Button
        android:id="@+id/scan_save_button"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:elevation="2dp"
        android:text="@string/save_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_centerline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <!-- 중앙을 결정할 상단과 하단의 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <!-- 왼쪽 가이드라인 설정 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <!-- 오른쪽 가이드라인 설정 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

</androidx.constraintlayout.widget.ConstraintLayout>
